# Stakeholder_mapping

./: .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  go.mod  go.sum  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
cmd/export/: main.go
cmd/importdata/: main.go
cmd/mcp/: main.go
cmd/migrate/: main.go
cmd/seed/: main.go
cmd/server/: main.go
db/: schema.sql  seed_demo.sql
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  MCP.md  SECURITY.md  TECHNICAL.md  USER_GUIDE.md
internal/config/: config.go
internal/domain/: communication.go  filter.go  project.go  raci.go  relationship.go  stakeholder.go  tag.go  workstream.go
internal/middleware/: security.go
internal/service/: ai.go  dashboard.go  export.go  export_test.go  ontology.go  ontology_test.go  project.go  raci.go  stakeholder.go  stakeholder_test.go  workstream.go
scripts/: security-check.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/ai/: chatService.ts  intentParser.ts
src/db/: database.ts  schema.sql  seed.ts
src/hooks/: useKeyboardShortcuts.ts
src/lib/: export.ts  utils.ts
src/store/: index.ts
src/types/: index.ts
src/views/: Dashboard.tsx  InfluenceMatrix.tsx  NetworkGraph.tsx  OrgChart.tsx  RACIMatrix.tsx
web/templates/: comms.html  dashboard.html  help.html  influence.html  layout.html  network.html  orgchart.html  (+2 more)
(+46 files in other folders)
