[package]
name = "stakeholder-mapping"
version = "1.0.0"
description = "A Tauri App for Stakeholder Mapping"
authors = ["you"]
edition = "2021"

[lib]
name = "stakeholder_mapping_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

